--- a/css/en/main.scss
+++ b/css/en/main.scss
@@ -12,7 +12,7 @@
   url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular") format("svg");
 }
 
-$border: #EEEEEE;
+$border: #CECECE;
 $green: #1ECD97;
 $purple: #bd8cbf;
 $gray: #cccccc;
@@ -2763,10 +2763,13 @@ body {
   }
 
   .purchase {
-    padding: 40px;
+    padding: 40px 60px;
     z-index: 6;
     display: flex;
     min-height: 100vh;
+    input,select,textarea{
+      outline:none;
+    }
 
     .factor {
       display: flex;
@@ -2803,6 +2806,9 @@ body {
 
       .items {
         flex-grow: 1;
+        overflow-y: scroll;
+        padding: 0 15px;
+        max-height: 60vh;
 
         .item {
           display: flex;
@@ -2819,6 +2825,19 @@ body {
             height: 95px;
             object-fit: scale-down;
             border-radius: 12px;
+          }
+          h5.name{
+            width: 150px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+          }
+
+          .price {
+            width: 165px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
           }
 
           .entity {
@@ -2839,13 +2858,15 @@ body {
 
           .close {
             border-radius: 11px;
+            display: flex;
+            align-items: center;
 
             &::after {
               font-family: "FontAwesome", serif;
               content: "\f00d";
               display: inline-block;
               color: #00000085;
-              padding: 1px 7px;
+              padding: 2px 7px;
               vertical-align: middle;
               height: 30px;
             }
