responsive: generalshop Completed

--- a/css/en/main.scss
+++ b/css/en/main.scss
@@ -117,7 +117,7 @@ body {
     font-family: "Mf Queen Leela", serif;
     position: absolute;
     color: #cccccc;
-    z-index: 5;
+    z-index: -1;
     left: -.2em;
     top: -50px;
     user-select: none;
@@ -430,6 +430,9 @@ body {
     justify-content: center;
     border-bottom: solid $border 2px;
     height: 80px;
+    @include sm {
+      justify-content: flex-end;
+    }
 
     .lang {
       position: absolute;
@@ -461,6 +464,10 @@ body {
       line-height: 1.2;
       font-size: 1.5rem;
       font-weight: 300;
+      align-items: center;
+      @include lg {
+        font-size: 1rem;
+      }
 
       ul {
         justify-self: center;
@@ -482,7 +489,9 @@ body {
           display: flex;
           justify-content: center;
           align-items: center;
-
+          @include sm{
+            display: none;
+          }
           &:hover {
             background-color: $gray;
           }
@@ -492,6 +501,9 @@ body {
           display: flex;
           background-color: $border;
           border-radius: 10px;
+          height: 1.2em;
+          padding: 5px 0;
+          align-items: center;
 
           img {
             height: 1.2em;
@@ -598,7 +610,6 @@ body {
   .portrait {
     width: 100%;
     height: calc(100vh - 80px);
-    z-index: 6;
     background: url(../../img/tree.png) no-repeat right -20vw bottom -10vh;
     background-size: calc(100vh - 80px);
     background-color: #f8f8f8;
@@ -606,16 +617,43 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    @include sm{
+      flex-direction: column;
+    }
 
     img {
       margin: 15vw;
       vertical-align: middle;
+      @include xl {
+        margin: 4vw;
+      }
+      @include lg {
+        margin: 2vw;
+        width: 350px;
+      }
+      @include md{
+          width: 280px;
+      }
+      @include sm {
+        width: 320px;
+      }
     }
 
     h2 {
       font-size: 6rem;
       padding: 40px;
       font-family: "Mf Queen Leela", serif;
+      @include lg {
+        font-size: 3rem;
+      }
+      @include md {
+        font-size: 2.5rem;
+        padding: 25px;
+      }
+      @include sm {
+        font-size: 1.5rem;
+        text-align: center;
+      }
     }
   }
 
@@ -629,16 +667,35 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+  @include md{
+    flex-direction: column;
+  }
 
     img {
       padding: 15vw;
       vertical-align: middle;
+      @include lg {
+        padding: 1vw;
+        width: 320px;
+      }
     }
 
     h2 {
       font-size: 7rem;
       padding: 40px;
       font-family: "Mf Queen Leela", serif;
+      @include lg {
+        font-size: 5rem;
+        padding: 20px;
+      }
+      @include md{
+        padding: 0;
+        margin: 0;
+      }
+      @include sm{
+        font-size: 2rem;
+        text-align: center
+      }
     }
   }
 
@@ -945,16 +1002,26 @@ body {
     .cats-title {
       width: 60vw;
       margin: auto;
+      @include lg {
+        width: 90vw;
+      }
 
       ul {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
         padding-inline-start: 0;
+        @include sm {
+          flex-direction: column;
+          align-items: center;
+        }
 
         li {
           list-style: none;
           padding: 20px;
+          @include lg {
+            padding: 10px;
+          }
 
         }
 
@@ -962,6 +1029,9 @@ body {
           color: #3e3e46;
           font-size: 2.2rem;
           text-decoration: none;
+          @include md{
+            font-size: 1.3rem;
+          }
 
           &:hover {
             color: $purple;
@@ -991,6 +1061,9 @@ body {
         width: 300px;
         align-items: center;
         margin: 25px;
+        @include lg {
+          width: 220px;
+        }
 
         a {
           text-align: center;
@@ -1002,12 +1075,18 @@ body {
           object-fit: contain;
           border-bottom: solid 3px #EEEEEE;
           padding: 5px;
+          @include lg {
+            height: 280px;
+          }
         }
 
         span {
           padding: 5px 10px;
           text-align: center;
           cursor: pointer;
+          @include lg {
+            font-size: 1.7rem;
+          }
         }
 
         .seemore {
@@ -1642,7 +1721,7 @@ body {
       width: 100%;
       display: flex;
       justify-content: flex-end;
-      @include sm{
+      @include sm {
         justify-content: center;
       }
 
@@ -1650,7 +1729,7 @@ body {
         display: flex;
         justify-content: space-around;
         padding: 20px 100px;
-        @include sm{
+        @include sm {
           padding: 20px 0;
         }
 
